--- a/animism-site/public/admin/config.yml
+++ b/animism-site/public/admin/config.yml
@@ -1,3 +1,15 @@
+backend:
+  name: proxy
+  proxy_url: https://animism-wiki.netlify.app/.netlify/functions/auth
+  login: https://animism-wiki.netlify.app/.netlify/functions/auth
+  branch: main
+
+media_folder: "public/images/uploads"
+public_folder: "/images/uploads"
+
+media_library:
+  name: uploadcare
+
 collections:
   - name: "spirits"
     label: "Great Spirits"
