--- a/animism-site/package.json
+++ b/animism-site/package.json
@@ -10,6 +10,11 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.2.3",
-    "astro": "^5.6.1"
+    "@astrojs/react": "^4.2.4",
+    "@types/react": "^19.1.1",
+    "@types/react-dom": "^19.1.2",
+    "astro": "^5.6.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
