--- a/animism-site/package.json
+++ b/animism-site/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "astro": "^5.6.1",
+    "phosphor-react": "^1.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
